Actions
Bug #9218
closedbge: this statement may fall through
Start date:
2018-03-01
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Issue found by gcc 7:
../../common/io/bge/bge_chip2.c:2146:6: error: this statement may fall through [-Werror=implicit-fallthrough=] if (bgep->chipid.device == DEVICE_ID_5761) ^ ../../common/io/bge/bge_chip2.c:2148:2: note: here case BGE_APE_LOCK_GRC: ^~~~ ../../common/io/bge/bge_chip2.c: In function 'bge_ape_unlock': ../../common/io/bge/bge_chip2.c:2207:6: error: this statement may fall through [-Werror=implicit-fallthrough=] if (bgep->chipid.device == DEVICE_ID_5761) ^ ../../common/io/bge/bge_chip2.c:2209:2: note: here case BGE_APE_LOCK_GRC: ^~~~ cc1: all warnings being treated as errors
Updated by Electric Monk about 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit abfaa596b786488ec4aee4fcc241f6021f04ee50
commit abfaa596b786488ec4aee4fcc241f6021f04ee50 Author: Toomas Soome <tsoome@me.com> Date: 2018-05-30T15:09:04.000Z 9218 bge: this statement may fall through Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Reviewed by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions